--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,73 @@
 absl-py==0.10.0
-aiohttp==3.8.3
+aiohttp==3.7.3
 aiosignal==1.2.0
 appdirs==1.4.4
 astor==0.8.1
 astunparse==1.6.3
-async-timeout==4.0.2
+async-timeout==3.0.1
 attrs==22.1.0
 blinker==1.4
 brotlipy==0.7.0
 cachetools==4.2.2
 certifi==2023.5.7
 cffi==1.15.1
+chardet==3.0.4
 charset-normalizer==2.0.4
 click==8.0.4
+contourpy==1.1.1
 cryptography==39.0.1
 cycler==0.11.0
-flatbuffers==1.12
-frozenlist==1.3.3
+filelock==3.15.4
+flatbuffers==24.3.25
+fonttools==4.53.1
+frozenlist==1.2.0
+fsspec==2024.6.1
 gast==0.3.3
 google-auth==1.35.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.32.0
-h5py==2.10.0
 idna==3.4
 importlib-metadata==6.0.0
+importlib_resources==6.4.0
+jax==0.4.13
+jaxlib==0.4.13
+Jinja2==3.1.4
 joblib==1.3.1
-Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
 Markdown==3.4.1
 MarkupSafe==2.1.1
-matplotlib==3.1.2
-mkl-fft==1.3.6
-mkl-random==1.2.2
+matplotlib==3.7.5
+mediapipe==0.10.11
 mkl-service==2.4.0
-multidict==6.0.2
-numpy==1.19.5
+ml-dtypes==0.2.0
+mpmath==1.3.0
+multidict==4.7.5
+networkx==3.1
+numpy==1.22.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.5.82
+nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
+opencv-contrib-python==4.10.0.84
 opencv-python==4.8.0.74
 opt-einsum==3.3.0
 packaging==23.0
 pandas==1.4.4
 Pillow==10.0.0
-pip==23.1.2
+pip==24.0
+pipdeptree==2.11.0
 pooch==1.4.0
-protobuf==3.20.3
+protobuf==3.20.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
@@ -58,21 +81,20 @@ requests==2.29.0
 requests-oauthlib==1.3.0
 rsa==4.7.2
 scikit-learn==1.3.0
-scipy==1.10.1
+scipy==1.7.3
 seaborn==0.12.2
-setuptools==67.8.0
+setuptools==69.5.1
 six==1.15.0
-tensorboard==2.4.1
-tensorboard-data-server==0.7.0
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.4.1
-tensorflow-estimator==2.4.0
+sounddevice==0.4.7
+sympy==1.13.0
 termcolor==1.1.0
 threadpoolctl==3.2.0
-typing-extensions==3.7.4
+torch==2.3.1
+triton==2.3.1
+typing_extensions==4.12.2
 urllib3==1.26.16
 Werkzeug==2.2.3
-wheel==0.38.4
+wheel==0.43.0
 wrapt==1.12.1
-yarl==1.8.1
+yarl==1.6.3
 zipp==3.11.0
