--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,9 @@ google-pasta==0.2.0
 grpcio==1.32.0
 idna==3.4
 importlib-metadata==6.0.0
-importlib_resources==6.4.0
+importlib-resources==6.4.0
+intel-cmplr-lib-ur==2024.2.0
+intel-openmp==2024.2.0
 jax==0.4.13
 jaxlib==0.4.13
 Jinja2==3.1.4
@@ -39,6 +41,7 @@ Markdown==3.4.1
 MarkupSafe==2.1.1
 matplotlib==3.7.5
 mediapipe==0.10.11
+mkl==2024.2.0
 mkl-service==2.4.0
 ml-dtypes==0.2.0
 mpmath==1.3.0
@@ -87,11 +90,13 @@ setuptools==69.5.1
 six==1.15.0
 sounddevice==0.4.7
 sympy==1.13.0
+tbb==2021.13.0
 termcolor==1.1.0
 threadpoolctl==3.2.0
 torch==2.3.1
+torchvision==0.18.1
 triton==2.3.1
-typing_extensions==4.12.2
+typing-extensions==4.12.2
 urllib3==1.26.16
 Werkzeug==2.2.3
 wheel==0.43.0
