--- a/requirements.txt
+++ b/requirements.txt
@@ -27,9 +27,9 @@ google-auth==1.35.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.32.0
-idna==3.4
+idna==2.10
 importlib-metadata==6.0.0
-importlib-resources==6.4.0
+importlib_resources==6.4.0
 intel-cmplr-lib-ur==2024.2.0
 intel-openmp==2024.2.0
 jax==0.4.13
@@ -80,7 +80,7 @@ pyparsing==3.1.0
 PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2023.3
-requests==2.29.0
+requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
 scikit-learn==1.3.0
@@ -94,9 +94,11 @@ tbb==2021.13.0
 termcolor==1.1.0
 threadpoolctl==3.2.0
 torch==2.3.1
+torchattacks==3.5.1
 torchvision==0.18.1
+tqdm==4.66.4
 triton==2.3.1
-typing-extensions==4.12.2
+typing_extensions==4.12.2
 urllib3==1.26.16
 Werkzeug==2.2.3
 wheel==0.43.0
